# privguard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
api/: app.py  auth.py  jobs.py  serve.py
api/routes/: findings.py  scan.py  users.py
data/: brokers.json
docs/superpowers/plans/: 2026-06-17-privguard-v2-backend.md  2026-06-17-privguard-v2-frontend.md
docs/superpowers/specs/: 2026-06-17-privguard-phase2-design.md  2026-06-17-privguard-web-design.md
privguard/: db.py  main.py  reporter.py  scanner.py  submitter.py  vault.py
tests/: conftest.py  conftest_api.py  test_api_auth.py  test_api_findings.py  test_api_scan.py  test_api_users.py  test_db.py  test_main.py  test_reporter.py  test_scanner.py  test_scanner_v2.py  test_submitter.py  test_vault.py
web/: package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
web/__tests__/: FindingsTable.test.tsx  StatusBadge.test.tsx  hibp.test.ts
web/app/: layout.tsx  page.tsx
web/app/dashboard/: layout.tsx  page.tsx
web/app/tools/password-check/: page.tsx
web/app/users/[name]/: page.tsx
web/app/users/[name]/scan/: page.tsx
web/app/users/add/: page.tsx
web/components/: BreachList.tsx  FindingsTable.tsx  PasswordChecker.tsx  ScanProgress.tsx  StatCards.tsx  StatusBadge.tsx
web/lib/: api.ts  hibp.ts  types.ts
