[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privguard"
version = "1.0.0"
description = "PrivGuard v1 — CLI tool to encrypt PII locally, scan data brokers, auto-submit opt-outs, and generate Excel reports."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "cryptography>=41.0",
    "playwright>=1.40",
    "requests>=2.31",
    "openpyxl>=3.1",
]

[project.scripts]
privguard = "privguard.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["privguard*"]
