[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privguard"
version = "2.0.0"
description = "PrivGuard v2 — web dashboard for PII exposure tracking and opt-out automation."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "cryptography>=41.0",
    "playwright>=1.40",
    "requests>=2.31",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
privguard = "api.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["privguard*", "api*"]
